x.y.z
=====

Release date:

New features:

Bug fixes:

* Don't allow interactions with AudioWaveView while playing

Other:

1.7.1
=====

Release date:

Tue, 10 Feb 2026 08:13:25 +0200

Bug fixes:

* Fix graphical issues when adding a new column

* Fix NoteVisualizer not taking mixer into account

1.7.0
=====

Release date:

Sun, 08 Feb 2026 19:40:04 +0200

New features:

* Add tooltips to Song View pattern buttons

* Allow jumping to a new song position during playback by clicking on the Song View 

* Implement view for the recorded audio

Bug fixes:

* Fix GitHub Issue #36: Loss of icons

1.6.0
=====

Release date:

Tue, 03 Feb 2026 21:06:28 +0200

New features:

* Add a dedicated delay column
  - Now a note delay can be directly entered on the delay column (0-24 ticks)

* Add chord automation presets

* Make contents in instrument setting tabs vertically scrollable

* Make transpose undoable

Bug fixes:

* Fix volume meter not always triggered on line 0

1.5.0
=====

Release date:

Fri, 23 Jan 2026 22:08:32 +0200

New features:

* Add option to disable UI updates during playback

* Add velocity key track visualization and offset

Bug fixes:

* Fix velocity interpolation not undo'ed

* Fix broken LBP visualization

Other:

* Busy wait in PlayerWorker for higher precision

* UI performance improvements
  - Optimized Volume Meter triggering
  - LineNumberColums as ListView's
  - SongView as a ListView

1.4.0
=====

Release date:

Mon, 19 Jan 2026 21:12:26 +0200

New features:

* Fix GitHub Issue #27: Implement undo/redo for note data

* Implement velocity key track
  - Set per-instrument in track settings (0-100%)
  - Linearly reduces velocity for higher notes

* Enable live recording on the current column

* Implement adjustable delay per note column

* Implement rate reduction for MIDI CC automations

* Add offset parameter to MIDI CC modulation

* Make it possible to select audio source

Bug fixes:
