@@ -253,24 +253,24 @@ Cut/Copy/Paste (also available via right-clicking on the editor):
 * **Ctrl + F3**: cut the current pattern
 * **Ctrl + F4**: copy the current pattern
 * **Ctrl + F5**: paste the copied pattern
-* **Ctrl + C**: cut the current selection
-* **Ctrl + X**: copy the current selection
+* **Ctrl + X**: cut the current selection
+* **Ctrl + C**: copy the current selection
 * **Ctrl + V**: paste the copied selection
 
 Transposition (also available via right-clicking on the editor):
 
-* **Alt + F9**: transpose column by +1 semitone
-* **Alt + F10**: transpose column by -1 semitone
-* **Alt + F11**: transpose column by +12 semitones
-* **Alt + F12**: transpose column by -12 semitones
-* **Shift + F9**: transpose track by +1 semitone
-* **Shift + F10**: transpose track by -1 semitone
-* **Shift + F11**: transpose track by +12 semitones
-* **Shift + F12**: transpose track by -12 semitones
-* **Ctrl + F9**: transpose pattern by +1 semitone
-* **Ctrl + F10**: transpose pattern by -1 semitone
-* **Ctrl + F11**: transpose pattern by +12 semitones
-* **Ctrl + F12**: transpose pattern by -12 semitones
+* **Alt + F9**: transpose column by -1 semitone
+* **Alt + F10**: transpose column by +1 semitone
+* **Alt + F11**: transpose column by -12 semitones
+* **Alt + F12**: transpose column by +12 semitones
+* **Shift + F9**: transpose track by -1 semitone
+* **Shift + F10**: transpose track by +1 semitone
+* **Shift + F11**: transpose track by -12 semitones
+* **Shift + F12**: transpose track by +12 semitones
+* **Ctrl + F9**: transpose pattern by -1 semitone
+* **Ctrl + F10**: transpose pattern by +1 semitone
+* **Ctrl + F11**: transpose pattern by -12 semitones
+* **Ctrl + F12**: transpose pattern by +12 semitones
 
 ### Experimental note visualization video generation
 
