@@ -71,6 +71,8 @@ static void initLogger()
 
 int main(int argc, char ** argv)
 {
+    qputenv("QML_XHR_ALLOW_FILE_READ", "1");
+
     QCoreApplication::setOrganizationName(noteahead::Constants::qSettingsCompanyName());
     QCoreApplication::setApplicationName(noteahead::Constants::qSettingSoftwareName());
 #ifdef Q_OS_WIN32
