@@ -204,6 +204,12 @@ ApplicationWindow {
         onAccepted: uiLogger.info(_tag, "Track settings accepted")
         onRejected: uiLogger.info(_tag, "Track settings rejected")
     }
+    ManualDialog {
+        id: manualDialog
+        anchors.centerIn: parent
+        width: parent.width * Constants.defaultDialogScale
+        height: parent.height * Constants.defaultDialogScale
+    }
     UnsavedChangesDialog {
         id: unsavedChangesDialog
         anchors.centerIn: parent
@@ -351,6 +357,7 @@ ApplicationWindow {
     }
     function _connectUiService(): void {
         UiService.aboutDialogRequested.connect(aboutDialog.open);
+        UiService.manualDialogRequested.connect(manualDialog.open);
         UiService.shortcutsDialogRequested.connect(shortcutsDialog.open);
         UiService.eventSelectionDialogRequested.connect(() => {
             eventSelectionDialog.requestData();
